build(requirements): 更新依赖包安装方式并添加新依赖
- 将 en-core-web-sm 依赖从注释状态恢复，并改为使用 GitHub 下载链接安装
- 添加 deepseek 依赖包
- 调整部分依赖包的安装顺序

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,8 @@ psutil==6.0.0
 PyYAML==6.0.2
 safetensors==0.4.5
 torch==2.4.1
-en-core-web-sm==3.7.1
+#en-core-web-sm==3.7.1
+https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
 spacy==3.7.5
 faiss-cpu==1.8.0.post1
 nltk==3.9.1
@@ -28,3 +29,5 @@ sentencepiece==0.2.0
 transformers==4.45.1
 tokenizers==0.20.0
 wheel==0.44.0
+deepseek==1.0.0
+
