--- a/requirements.txt
+++ b/requirements.txt
@@ -11,17 +11,20 @@ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1
 spacy==3.7.5
 faiss-cpu==1.8.0.post1
 nltk==3.9.1
-click==8.1.7
+#click==8.1.7
+click==8.1.8
 joblib==1.4.2
 regex==2024.9.11
 tqdm==4.66.5
-openai==1.51.0
+#openai==1.51.0
+openai==1.58.1
 anyio==4.6.0
 httpx==0.27.2
 pandas==2.2.3
 python-dateutil==2.9.0.post0
 pytz==2024.2
-protobuf==5.28.2
+#protobuf==5.28.2
+protobuf==3.20.2
 rank-bm25==0.2.2
 scikit-learn==1.5.2
 scipy==1.14.1
@@ -30,4 +33,4 @@ transformers==4.45.1
 tokenizers==0.20.0
 wheel==0.44.0
 deepseek==1.0.0
-
+python-multipart==0.0.18
